docs(fe): change UI

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -9,12 +9,10 @@
         <div class="banner">
             <div class="navbar">
                 <div class = "logo-name" onclick="location.href='/index'">
-                    <img src="/images/Logo.jpg" class="logo"> <a href="/index" class="name">POS SYSTEM</a>
+                    <img src="/images/Logo.jpg" class="logo"> <a href="/index" class="name">An Nam</a>
                 </div>
                 <ul>
                     <li><a href="/index">TRANG CHỦ</a></li>
-                    <li><a href="#end-of-page">LIÊN HỆ</a></li>
-                    <li><a href="#end-of-page">GIẤY PHÉP</a></li>
                     <li><a href="/about">VỀ CHÚNG TÔI</a></li>
                 </ul>
             </div>
