docs(fe): change logo

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="/images/Logo.jpg"/>
+
   <title>Giới thiệu nhóm C-HTV</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
@@ -243,16 +245,16 @@
           <img src="/images/avt1.jpg" alt="Mã Trường Vũ" loading="lazy">
         </div>
         <div class="member-info">
-          <h2 class="member-name">Mã Trường Vũ</h2>
-          <div class="member-id">ID: 2213995</div>
+          <h2 class="member-name">Lâm Tuấn Huy</h2>
+          <div class="member-id">ID: 2211185</div>
           <div class="member-role">Front-end Developer</div>
-          <div class="member-detail">Thiết kế HTML và database schema</div>
+          <div class="member-detail">Thiết kế HTML</div>
           <div class="member-contact">
-            <a href="https://www.facebook.com/vu.ma.372" target="_blank" rel="noopener" class="contact-button fb-button">
+            <a href="https://www.facebook.com/lvtb185/" target="_blank" rel="noopener" class="contact-button fb-button">
               <i class="fab fa-facebook"></i>
               Facebook
             </a>
-            <a href="mailto:vu.makhmtk22@hcmut.edu.vn" class="contact-button email-button">
+            <a href="mailto:huy.lamtuan1805@hcmut.edu.vn" class="contact-button email-button">
               <i class="fas fa-envelope"></i>
               Email
             </a>
