--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -9,7 +9,7 @@
         <div class="banner">
             <div class="navbar">
                 <div class = "logo-name" onclick="location.href='/index'">
-                    <img src="/images/Logo.jpg" class="logo"> <a href="/index" class="name">An Nam</a>
+                    <img src="/images/Logo.jpg" class="logo"> <a href="/index" class="name">Bách Khoa Store</a>
                 </div>
                 <ul>
                     <li><a href="/index">TRANG CHỦ</a></li>
