--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -9,7 +9,7 @@
         <div class="banner">
             <div class="navbar">
                 <div class = "logo-name" onclick="location.href='/index'">
-                    <img src="/images/Logo.jpg" class="logo"> <a href="/index" class="name">Bách Khoa Store</a>
+                    <img src="/images/Logo.jpg" class="logo"> <a href="/index" class="name">Bách Khoa Uni</a>
                 </div>
                 <ul>
                     <li><a href="/index">TRANG CHỦ</a></li>
@@ -18,8 +18,8 @@
             </div>
 
             <div class="content">
-                <h1>HỆ THỐNG QUẢN LÍ CỬA HÀNG POS</h1>
-                <p>Tăng hiệu quả bán hàng và quản lý cửa hàng toàn diện với Hệ thống POS! </p>
+                <h1>HỆ THỐNG QUẢN LÍ BÁCH KHOA UNI</h1>
+                <p>Tăng hiệu quả bán hàng và quản lý cửa hàng toàn diện với hệ thống BKU! </p>
                 <div>
                     <button type="button" onclick="location.href='/employeeList'"><span></span>DANH SÁCH NHÂN VIÊN</button>
                     <button type="button" onclick="location.href='/productLot'"><span></span>DANH SÁCH SẢN PHẨM</button>
@@ -30,13 +30,13 @@
             </div>
 
             <div class="more-info" id = "end-of-page">
-                <div>
-                    <p>Thư điện tử : pos.system_management@gmail.com. <br> <br> Đường dây nóng : (+84) 975 801 426.
-                        <br> <br> Địa chỉ : 82A Nguyễn Trọng Tuyển, Phường 15, Quận Phú Nhuận, Tp.HCM.
+                <div style="padding-left: 50px;">
+                    <p>Thư điện tử : bk_uni@gmail.com. <br> <br> Đường dây nóng : (+84) 975 801 426.
+                        <br> <br> Địa chỉ : Khu phố Tân Lập, Phường Đông Hòa, TP. Dĩ An, Tỉnh Bình Dương.
                     </p>
                 </div>
                 <div style="text-align: right; font-family: sans-serif;">
-                    <p> <i class="bx bxs-copyright"></i> Bản quyền thuộc về : Gia đình CHNMV</p>
+                    <p> <i class="bx bxs-copyright"></i> Bản quyền thuộc về: Tổ kỹ thuật Trường Đại học Bách Khoa HCM</p>
                 </div>
             </div>
         </div>
