build(fe): delete page

--- a/src/main/resources/static/css/homePage.css
+++ b/src/main/resources/static/css/homePage.css
@@ -109,7 +109,7 @@ html{
     font-size: 20px;
     font-weight: 100;
     line-height: 25px;
-    color: rgb(202, 192, 192);
+    color: white;
 }
 
 button {
