--- a/src/main/resources/static/css/homePage.css
+++ b/src/main/resources/static/css/homePage.css
@@ -1,5 +1,5 @@
 :root {
-    --nav-bar-color: #0957A8;
+    --nav-bar-color: #51A4F1;
     --nav-item-color: white;
     --button-color: #0957A8;
 }
