--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -1,7 +1,7 @@
 :root {
     --background-color: #dfe9f5;
-    --nav-item-hover-color: #34AF6D;
-    --logo-bar-color: #34AF6D;
+    --nav-item-hover-color: #0957A8;
+    --logo-bar-color: #0957A8;
 }
 
 * {
