--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -2,8 +2,8 @@
     <ul>
         <li><a href="/home" class="user">
                 <span class="nav-item">
-                    <div class="user-name">POS SYSTEM</div>
-                    <div class="user-role">Quản lí cửa hàng tiện lợi</div>
+                    <div class="user-name">BACH KHOA UNI</div>
+                    <div class="user-role">Danh mục quản lí</div>
                 </span>
             </a></li>
         <li><a href="/home">
